@@ -143,6 +143,7 @@ static const struct {
 	.color = &_color
 };
 
+/* FIXME: maybe they should also be in `block', where the generic conversion function is? */
 /* TODO: also support "border-width" -style -color -radius */
 
 static bool
@@ -945,16 +946,12 @@ ccss_style_dump (ccss_style_t const *self)
 	GHashTableIter	 iter;
 	GQuark		 property_id;
 	void const	*property;
-	double		 dval;
 	char		*strval;
 
 	g_hash_table_iter_init (&iter, self->properties);
 	while (g_hash_table_iter_next (&iter, (gpointer *) &property_id, (gpointer *) &property))  {
 
 		if (ccss_property_convert (property, property_id, 
-		    CCSS_PROPERTY_TYPE_DOUBLE, &dval)) {
-			printf ("%s: %f;\n", g_quark_to_string (property_id), dval);
-		} else if (ccss_property_convert (property, property_id, 
 		    CCSS_PROPERTY_TYPE_STRING, &strval)) {
 			printf ("%s: %s;\n", g_quark_to_string (property_id), strval);
 			g_free (strval), strval = NULL;
